Scipy odeint implementation

--- a/python_testing.ipynb
+++ b/python_testing.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ticktack                 # For the compilation of the model\n",
     "import ode                      # As a method of solving the odes\n",
     "import numpy as np              # For the basic functions that need to be written\n",
-    "from jax import numpy as jnp    # annoying shit that I wish I didn't hav to deal with "
+    "from jax import numpy as jnp    # annoying shit that I wish I didn't hav to deal with \n",
+    "import jax.experimental.ode as jax  # Jax odeint \n",
+    "import scipy.integrate as sci   # Scipy odeint "
    ]
   },
   {
@@ -104,6 +106,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So the plan is to profile all of the ode solvers using a loop through the different namespaces that provide the ode implementations. Basically, ode_namespace = [sci, jax, ode]. I can then use a pandas data frame to store the results in what is basically a fancy dictionary."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -115,25 +124,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jax_carbon_concentrations = jax.odeint(dydx, u0, np.arange(760.0, 790.0, 1))    # Running jax implem\n",
+    "jax_troposphere = jax_carbon_concentrations[:, 2]   # Jax troposphere values "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scipy_carbon_concentrations = sci.odeint(dydx, u0, np.arange(760.0, 790.0, 1))  # Scipy implementation\n",
+    "sci_troposphere = scipy_carbon_concentrations[:, 2] # Troposphere values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'odeint' from 'jax' (/home/jordan/.local/lib/python3.8/site-packages/jax/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-41-09b15ee1d368>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mjax\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0modeint\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mjaxodenint\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mjax_carbon_concentrations\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjaxodeint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdydx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m760.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m790.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'odeint' from 'jax' (/home/jordan/.local/lib/python3.8/site-packages/jax/__init__.py)"
-     ]
+     "data": {
+      "text/plain": [
+       "DeviceArray([1191.48952671, 1191.56921579, 1191.69537559, 1191.82795313,\n",
+       "             1191.92485798, 1191.95532551, 1191.90968446, 1191.80242753,\n",
+       "             1191.66760999, 1191.54803742, 1191.48167524, 1191.48959491,\n",
+       "             1191.56928397, 1191.69544361, 1191.82802107, 1191.93935936,\n",
+       "             1192.79704681, 1193.67163383, 1194.40340794, 1194.97333983,\n",
+       "             1195.41774354, 1195.78700843, 1196.12083062, 1196.43584332,\n",
+       "             1196.72408928, 1196.96031014, 1197.11463467, 1197.16620507,\n",
+       "             1197.11329645, 1196.97673725], dtype=float64)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    "import jax.experimental.ode as jax\n",
-    "jax_carbon_concentrations = jax.odeint(dydx, u0, np.arange(760.0, 790.0, 1))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
