Prototyping the profiling loop. Limitations of pandas

--- a/python_testing.ipynb
+++ b/python_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,9 @@
     "import numpy as np              # For the basic functions that need to be written\n",
     "from jax import numpy as jnp    # annoying shit that I wish I didn't hav to deal with \n",
     "import jax.experimental.ode as jax  # Jax odeint \n",
-    "import scipy.integrate as sci   # Scipy odeint "
+    "import scipy.integrate as sci   # Scipy odeint \n",
+    "import pandas as pd             # Becuase I want to \n",
+    "from time import process_time   # For timing the different ode implementations"
    ]
   },
   {
@@ -74,13 +76,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The following array represents the position of the system following the burn in period. Instead of running this in python I just pirated the julia results because it was easier to do this."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -114,128 +109,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ode_namespace = [ode, sci, jax] # List of namespaces with the odeint function \n",
+    "results = pd.DataFrame(columns=[\"ode\", \"sci\", \"jax\"])   # storing the results\n",
+    "\n",
+    "for i, namespace in enumerate(ode_namespace):\n",
+    "    timer = process_time()\n",
+    "    C14 = namespace.odeint(dydx, u0, np.arange(760.0, 790.0, 1))\n",
+    "    timer = process_time() - timer\n",
+    "    # results.namespace = C14"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-64-170e3bc4d4b2>:5: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  test.jax[1] = 1\n"
-     ]
-    },
-    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>scipy</th>\n",
-       "      <th>jax</th>\n",
-       "      <th>ode</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   scipy  jax  ode\n",
-       "0      1  NaN  NaN\n",
-       "1      2    1  NaN\n",
-       "2      3  NaN  NaN\n",
-       "3      4  NaN  NaN\n",
-       "4      5  NaN  NaN\n",
-       "5      6  NaN  NaN\n",
-       "6      7  NaN  NaN\n",
-       "7      8  NaN  NaN\n",
-       "8      9  NaN  NaN"
+       "'jax'"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "test = pd.DataFrame(columns=[\"scipy\", \"jax\", \"ode\"])\n",
-    "test.scipy = np.arange(1, 10)"
+    "test = f\"{ode_namespace[2]}\"[9:12]"
    ]
   },
   {
