Incramental commit of changes to the implementation

--- a/python_testing.ipynb
+++ b/python_testing.ipynb
@@ -103,16 +103,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So the plan is to profile all of the ode solvers using a loop through the different namespaces that provide the ode implementations. Basically, ode_namespace = [sci, jax, ode]. I can then use a pandas data frame to store the results in what is basically a fancy dictionary.\n",
-    "\n",
-    "So I basically need to reimplement my julia profiler function in python. I might start by getting the visualisation copies going and setting the dark mode"
+    "This is going very very well. I need to go plumbing again though. this means that I can look through the depths of the ode implementation and destroy the extra return improving my ability to do things"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "tuple indices must be integers or slices, not tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-136-968c977919dd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     19\u001b[0m             } \n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m             \u001b[0maccuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mC14\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m             \u001b[0maccuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0maccuracy\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmedian\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maccuracy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmedian\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maccuracy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m             \u001b[0maccuracy_variance\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maccuracy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: tuple indices must be integers or slices, not tuple"
+     ]
+    }
+   ],
    "source": [
     "odes = {ode: np.NaN, jax: np.NaN}  # For the storage of the profiles \n",
     "\n",
@@ -126,9 +136,28 @@
     "        time_sample[i] = timer          # Storing the timer #! Can be shortened \n",
     "\n",
     "        if i == 9: # Storing the data from just the final run \n",
-    "            odes[namespace] = C14[:, 2] # Storing the result\n",
+    "            #? So this is dogy as all hell. I need to implement this so that it can be put into a pandas data frame. That way I will be closer to weilding the might of scipy \n",
+    "            odes[namespace] = {\n",
+    "                \"time\": np.NaN,             \n",
+    "                \"time_variance\": np.NaN,\n",
+    "                \"accuracy\": np.NaN,\n",
+    "                \"accuracy_variance\": np.NaN\n",
+    "            } \n",
     "            \n",
-    "            odes[namespace] = np.mean(time_sample)\n"
+    "            accuracy = C14[:, 2] \n",
+    "            accuracy = (accuracy - np.median(accuracy)) / np.median(accuracy)\n",
+    "            accuracy_variance = np.var(accuracy)        \n",
+    "            time = np.mean(time_sample)\n",
+    "            time_variance = np.var(time_sample)\n",
+    "\n",
+    "            #* This is very novice code\n",
+    "\n",
+    "            odes[namespace][\"time\"] = time\n",
+    "            odes[namespace][\"time_variance\"] = time_variance\n",
+    "            odes[namespace][\"accuracy\"] = accuracy\n",
+    "            odes[namespace][\"accuracy_variance\"] = accuracy_variance\n",
+    "\n",
+    "\n"
    ]
   },
   {
