Prototype profile function

--- a/python_testing.ipynb
+++ b/python_testing.ipynb
@@ -120,26 +120,27 @@
     "    \"accuracy variance\" : []\n",
     "}\n",
     "\n",
-    "for namespace in {ode : \"ode\", jax : \"jax\"}:# Iterating through the namespaces of odeint function \n",
-    "    time_sample = np.zeros(10)  # Storing the trials\n",
-    "    \n",
-    "    for i in range(10):\n",
-    "        timer = process_time()  # starting a timer \n",
-    "        C14 = namespace.odeint(dydx, u0, np.arange(760.0, 790.0, 1))    # Running the model \n",
-    "        time_sample[i] = process_time() - timer  # Stopping the timer and storing \n",
+    "def profile(func: function, args=[]): None\n",
+    "    for namespace in {ode : \"ode\", jax : \"jax\"}:# Iterating through the namespaces of odeint function \n",
+    "        time_sample = np.zeros(10)  # Storing the trials\n",
+    "        \n",
+    "        for i in range(10):\n",
+    "            timer = process_time()  # starting a timer \n",
+    "            C14 = namespace.odeint(dydx, u0, np.arange(760.0, 790.0, 1))    # Running the model \n",
+    "            time_sample[i] = process_time() - timer  # Stopping the timer and storing \n",
     "\n",
-    "        if i == 9: # Storing the data from just the final run \n",
-    "            accuracy = C14[:, 2] \n",
-    "            accuracy = (accuracy - np.median(accuracy)) / np.median(accuracy)\n",
-    "            accuracy_variance = np.var(accuracy)    # Accuracy variance\n",
-    "            accuracy = np.mean(accuracy)            # Accuracy \n",
-    "            time = np.mean(time_sample)             # Mean run time \n",
-    "            time_variance = np.var(time_sample)     # Variance of the run times \n",
+    "            if i == 9: # Storing the data from just the final run \n",
+    "                accuracy = C14[:, 2] \n",
+    "                accuracy = (accuracy - np.median(accuracy)) / np.median(accuracy)\n",
+    "                accuracy_variance = np.var(accuracy)    # Accuracy variance\n",
+    "                accuracy = np.mean(accuracy)            # Accuracy \n",
+    "                time = np.mean(time_sample)             # Mean run time \n",
+    "                time_variance = np.var(time_sample)     # Variance of the run times \n",
     "\n",
-    "            results[\"time\"].append(time)\n",
-    "            results[\"time variance\"].append(time_variance)\n",
-    "            results[\"accuracy\"].append(accuracy)\n",
-    "            results[\"accuracy variance\"].append(accuracy_variance)"
+    "                results[\"time\"].append(time)\n",
+    "                results[\"time variance\"].append(time_variance)\n",
+    "                results[\"accuracy\"].append(accuracy)\n",
+    "                results[\"accuracy variance\"].append(accuracy_variance)"
    ]
   },
   {
