First commit to the new branch

--- a/python_testing.ipynb
+++ b/python_testing.ipynb
@@ -120,7 +120,7 @@
     "    \"accuracy variance\" : []\n",
     "}\n",
     "\n",
-    "def profile(func: function, args=[]): None\n",
+    "def profile(func: function, args=[]):\n",
     "    for namespace in {ode : \"ode\", jax : \"jax\"}:# Iterating through the namespaces of odeint function \n",
     "        time_sample = np.zeros(10)  # Storing the trials\n",
     "        \n",
