Complete prototype profile function

--- a/python_testing.ipynb
+++ b/python_testing.ipynb
@@ -103,53 +103,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is going very very well. I need to go plumbing again though. this means that I can look through the depths of the ode implementation and destroy the extra return improving my ability to do things"
+    "This is going very very well. I need to go plumbing again though. this means that I can look through the depths of the ode implementation and destroy the extra return improving my ability to do things\n",
+    "\n",
+    "So the median will not work with only two cases. Both the mean and the median will be half way between the two. Additionally, my implementation here is completely wrong. I need to upgrade it as I have done in julia.\n",
+    "\n",
+    "I might be able to get rid of the accuracy since with only two different implementations there is no way to measure the accuracy."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "results = {    # Storing the data using a dictionary \n",
-    "    \"solver\" : [\"ode\", \"jax\"],\n",
-    "    \"time\" : [],\n",
-    "    \"time variance\" : [],\n",
-    "    \"accuracy\" : [],\n",
-    "    \"accuracy variance\" : []\n",
+    "    \"solver\" : [],              # The library containing the solver \n",
+    "    \"function\" : [],            # The function that was getting profiled \n",
+    "    \"time\" : [],                # The mean run time of 10 trials \n",
+    "    \"time variance\" : []       # The variance of the run time of 10 trials\n",
     "}\n",
     "\n",
-    "def profile(func: function, args=[]):\n",
-    "    for namespace in {ode : \"ode\", jax : \"jax\"}:# Iterating through the namespaces of odeint function \n",
-    "        time_sample = np.zeros(10)  # Storing the trials\n",
-    "        \n",
-    "        for i in range(10):\n",
-    "            timer = process_time()  # starting a timer \n",
-    "            C14 = namespace.odeint(dydx, u0, np.arange(760.0, 790.0, 1))    # Running the model \n",
-    "            time_sample[i] = process_time() - timer  # Stopping the timer and storing \n",
+    "def profile(func, args=[]):\n",
+    "    time_sample = np.zeros(10)  # Storing the trials\n",
+    "    \n",
+    "    for i in range(10):\n",
+    "        timer = process_time()                  # starting a timer \n",
+    "        func(*args)                             # Running the model \n",
+    "        time_sample[i] = process_time() - timer # Stopping the timer and storing \n",
     "\n",
-    "            if i == 9: # Storing the data from just the final run \n",
-    "                accuracy = C14[:, 2] \n",
-    "                accuracy = (accuracy - np.median(accuracy)) / np.median(accuracy)\n",
-    "                accuracy_variance = np.var(accuracy)    # Accuracy variance\n",
-    "                accuracy = np.mean(accuracy)            # Accuracy \n",
-    "                time = np.mean(time_sample)             # Mean run time \n",
-    "                time_variance = np.var(time_sample)     # Variance of the run times \n",
+    "    results[\"time\"].append(np.mean(time_sample))        # Storing the mean run time \n",
+    "    results[\"time variance\"].append(np.var(time_sample))# Storing the variance of the mean\n",
     "\n",
-    "                results[\"time\"].append(time)\n",
-    "                results[\"time variance\"].append(time_variance)\n",
-    "                results[\"accuracy\"].append(accuracy)\n",
-    "                results[\"accuracy variance\"].append(accuracy_variance)"
+    "for namespace in {ode : \"ode\", jax : \"jax\"}:# Iterating through the namespaces of odeint function \n",
+    "    profile(namespace.odeint, [dydx, u0, np.arange(760.0, 790.0, 1)])   # Profiling the speed \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'solver': [],\n",
+       " 'function': [],\n",
+       " 'time': [0.000746808200000082, 0.0004302815000000848],\n",
+       " 'time variance': [4.4016498238952405e-07, 3.606811231715738e-08]}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "results = pd.DataFrame(results) # Switching to a pandas data frame"
+    "# results = pd.DataFrame(results) # Switching to a pandas data frame\n",
+    "results"
    ]
   },
   {
