Improvements to the profiling loop

--- a/python_testing.ipynb
+++ b/python_testing.ipynb
@@ -105,16 +105,23 @@
    "source": [
     "This is going very very well. I need to go plumbing again though. this means that I can look through the depths of the ode implementation and destroy the extra return improving my ability to do things\n",
     "\n",
-    "So the median will not work with only two cases. Both the mean and the median will be half way between the two. Additionally, my implementation here is completely wrong. I need to upgrade it as I have done in julia.\n",
-    "\n",
-    "I might be able to get rid of the accuracy since with only two different implementations there is no way to measure the accuracy."
+    "The code below is quite rough. I need to remove the global variable using returns from the profile function as a tuple."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unmatched ')' (<ipython-input-46-c1c4cb502e76>, line 26)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-46-c1c4cb502e76>\"\u001b[0;36m, line \u001b[0;32m26\u001b[0m\n\u001b[0;31m    results[\"time\"].append(mean))        # Storing the mean run time\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unmatched ')'\n"
+     ]
+    }
+   ],
    "source": [
     "results = {    # Storing the data using a dictionary \n",
     "    \"solver\" : [],              # The library containing the solver \n",
@@ -131,35 +138,113 @@
     "        func(*args)                             # Running the model \n",
     "        time_sample[i] = process_time() - timer # Stopping the timer and storing \n",
     "\n",
-    "    results[\"time\"].append(np.mean(time_sample))        # Storing the mean run time \n",
-    "    results[\"time variance\"].append(np.var(time_sample))# Storing the variance of the mean\n",
+    "    return np.mean(time_sample), np.var(time_sample)\n",
     "\n",
-    "for namespace in {ode : \"ode\", jax : \"jax\"}:# Iterating through the namespaces of odeint function \n",
-    "    profile(namespace.odeint, [dydx, u0, np.arange(760.0, 790.0, 1)])   # Profiling the speed \n"
+    "namespaces = {ode : \"ode\", jax : \"jax\"} # For translation from string to module \n",
+    "\n",
+    "for namespace in namespaces:# Iterating through the namespaces of odeint function \n",
+    "    mean, variance = profile(\n",
+    "        namespace.odeint, [dydx, u0, np.arange(760.0, 790.0, 1)])   # Profiling the speed\n",
+    "\n",
+    "    results[\"function\"].append(\"odeint\") # The function that was profiled \n",
+    "    results[\"solver\"].append(namespaces[namespace]) # Stroing implementation \n",
+    "    results[\"time\"].append(mean)        # Storing the mean run time \n",
+    "    results[\"time variance\"].append(variance)# Storing the variance of the mean\n",
+    "\n",
+    "    # profile()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>solver</th>\n",
+       "      <th>function</th>\n",
+       "      <th>time</th>\n",
+       "      <th>time variance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ode</td>\n",
+       "      <td>odeint</td>\n",
+       "      <td>0.001006</td>\n",
+       "      <td>1.067806e-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>jax</td>\n",
+       "      <td>odeint</td>\n",
+       "      <td>0.000425</td>\n",
+       "      <td>6.939772e-08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{'solver': [],\n",
-       " 'function': [],\n",
-       " 'time': [0.000746808200000082, 0.0004302815000000848],\n",
-       " 'time variance': [4.4016498238952405e-07, 3.606811231715738e-08]}"
+       "  solver function      time  time variance\n",
+       "0    ode   odeint  0.001006   1.067806e-07\n",
+       "1    jax   odeint  0.000425   6.939772e-08"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# results = pd.DataFrame(results) # Switching to a pandas data frame\n",
+    "results = pd.DataFrame(results) # Switching to a pandas data frame\n",
     "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(DeviceArray(1.2246468e-16, dtype=float64, weak_type=True),\n",
+       " DeviceArray(-1., dtype=float64, weak_type=True))"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from jax import jvp, grad\n",
+    "import jax.numpy as np\n",
+    "\n",
+    "jvp(np.sin, (np.pi,), (1.0,))\n",
+    "# cos = grad(np.sin)\n",
+    "# cos(3.14159)"
    ]
   },
   {
