Finalised loss function

--- a/python_testing.ipynb
+++ b/python_testing.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,12 +117,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "def loss_function(odeint, args):\n",
     "    simulation = odeint(*args)[:, 2][0:28]  # Running the simulation \n",
+    "    simulation = (simulation - u0[2]) / u0[2] # Deviations from initial \n",
     "\n",
     "    miyake = pd.read_csv(\"Miyake12.csv\", sep=\" \")   # Importing the miyake data\n",
     "    simulation += np.mean(miyake.d14c[1:4])         # Adding the offset \n",
